--- a/shellcheck/install
+++ b/shellcheck/install
@@ -6,3 +6,7 @@ set -o xtrace  # Print commands and their arguments as they are executed.
 ####### END-OF-TEMPLATE
 
 brew install shellcheck
+
+if command -v code ; then
+    code --install-extension timonwong.shellcheck
+fi
