--- a/aria2/install
+++ b/aria2/install
@@ -4,3 +4,7 @@ set -o errexit  # Exit immediately if a command exits with a non-zero status.
 set -o xtrace  # Print commands and their arguments as they are executed.
 
 ####### END-OF-TEMPLATE
+
+if command -v apt-get ; then
+    sudo apt-get install aria2
+fi
